--- a/assets/templates/page.html
+++ b/assets/templates/page.html
@@ -49,17 +49,18 @@
                 <button class="header-btn"
                     id="toggle-color"
                     onclick="toggleColorScheme()">
-                    &#128161;
+                    <div id="btn-sym-dark">&#128262;</div>
+                    <div id="btn-sym-light">&#127762;</div>
                 </button>
                 <button id="toc-btn"
                         class="header-btn"
                         onClick="toggleTOC()">
-                    &#128214;
+                    &#128366;
                 </button>
                 <button id="def-btn"
                         class="header-btn"
                         onClick="toggleDefinitions()">
-                    def
+                    &#8797;
                 </button>
             </div>
         </div>
