adds optional addition of js sources

--- a/assets/templates/page.html
+++ b/assets/templates/page.html
@@ -120,3 +120,6 @@ $endif$
 
 <script src="$basepath$/assets/js/overview.js" type="text/javascript"></script>
 <script src="$basepath$/assets/js/observer.js" type="text/javascript"></script>
+$if(additional-js)$
+$additional-js$
+$endif$
