renames oberver -> toc-observer for clarity

--- a/assets/templates/page.html
+++ b/assets/templates/page.html
@@ -116,7 +116,7 @@ $endif$
 </html>
 
 <script src="$basepath$/assets/js/overview.js" type="text/javascript"></script>
-<script src="$basepath$/assets/js/observer.js" type="text/javascript"></script>
+<script src="$basepath$/assets/js/toc-observer.js" type="text/javascript"></script>
 $if(additional-js)$
 $additional-js$
 $endif$
