uses date-meta in copyright footer

--- a/assets/templates/page.html
+++ b/assets/templates/page.html
@@ -106,7 +106,7 @@ $endfor$
 </br>
 </br>
 $if(author)$
-<small>&#127279; $author$ 2022</small>
+<small>&#127279; $author$ $date$</small>
 $endif$
 
 </div>
