--- a/assets/templates/page.html
+++ b/assets/templates/page.html
@@ -19,7 +19,7 @@
     <meta name="keywords" content="$for(tags)$$tags$$sep$, $endfor$">
     $endif$
     <meta property="og:type" content="website" />
-    <link rel="stylesheet" href="$basepath$/assets/js/Temml-0.9.0/dist/Temml-Local.css">
+    <link rel="stylesheet" href="$basepath$/assets/js/Temml-0.9.0/dist/Temml-Local.css" />
     <script src="$basepath$/assets/js/Temml-0.9.0/dist/temml.min.js"></script>
     <script src="$basepath$/assets/js/temml-loader.js" type="text/javascript"></script>
     <link rel="stylesheet" href="$basepath$/assets/stylesheets/base.css" type="text/css" />
